--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Calendario Campi Tennis</title>
+  <title>Calendario Campi Tennis Canottieri Ticino</title>
   <style>
     body {
       font-family: Arial, sans-serif;
