--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Calendario Campi Tennis Canottieri Ticino</title>
+  <title>Calendario Campi Tennis</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@
 </head>
 <body>
 
-  <h1>Calendario Occupazione Campi Tennis</h1>
+  <h1>Calendario Occupazione Campi Tennis CT</h1>
   <p>Consulta la disponibilità mensile dei campi. Ogni campo ha il suo calendario separato.</p>
 
   <div class="tabs">
